# elgato-lights-manager-linux

./: CMakeLists.txt  LICENSE  README.md  light.cpp  light.h  lights.cpp  lights.h  main.cpp  resources.qrc
qml/: Button.qml  Main.qml
qml/elements/: KeyLight.qml  OnOffButton.qml
